src/objects/RFP__c.object
<!--
Copyright (c) 2018, salesforce.com, inc., 
 All rights reserved. 
SPDX-License-Identifier: BSD-3-Clause 
For full license text, see the LICENSE file in the repo root or https: //opensource.org/licenses/BSD-3-Clause
-->

<CustomObject>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Questions__c</fullName>
        <label>Completed Questions</label>
        <summaryFilterItems>
            <field>RFP_Question__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>RFP_Question__c.RFP__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Completion_Percentage__c</fullName>
        <formula>IF(Question_Count__c &gt; 0 , Completed_Questions__c /  Question_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Compliance_Responses__c</fullName>
        <defaultValue>&apos;Compliant;Partially Compliant;Non-Compliant&apos;</defaultValue>
        <description>This is a semicolon separated list. It is a text field rather than a picklist because users can change the possible values on a per-RFP basis from the app&apos;s user interface.</description>
        <label>Compliance Responses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RFPs</relationshipLabel>
        <relationshipName>RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Count__c</fullName>
        <label>Question Count</label>
        <summaryForeignKey>RFP_Question__c.RFP__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>RFP</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RFP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>